tests/machine/x/ocaml/map_nested_assign.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/map_nested_assign.ml", line 29, characters 53-66:
29 | let data : (string * Obj.t) list ref = ref { outer = { inner = 1 } }
                                                          ^^^^^^^^^^^^^
Error: This expression should not be a record, the expected type is
       (string * Obj.t) list


Context (around line 29):
  27 | type record2 = { mutable inner : int }
  28 | 
  29 | let data : (string * Obj.t) list ref = ref { outer = { inner = 1 } }
  30 | 
  31 | let () =
